# go-vs-dart

./: .gitignore  README.md  REPORT.md  docker-compose.yaml
actix-service/: Cargo.toml  Dockerfile
actix-service/src/: main.rs
axum-service/: Cargo.toml  Dockerfile
axum-service/src/: main.rs
bench/: k6-bench.js  k6-warmup.js
bun-service/: Dockerfile  Dockerfile.native  server-native.mjs  server.mjs
dart-service/: Dockerfile  Dockerfile.gc  pubspec.yaml
dart-service-redis310/: Dockerfile  pubspec.yaml
dart-service/ioredis/: README.md  analysis_options.yaml  pubspec.yaml
dart-service/ioredis/integration_test/: cluster_test.dart  docker_redis.dart  docker_redis_cluster.dart  redis_test.dart
dart-service/ioredis/lib/: ioredis.dart
dart-service/ioredis/lib/src/: errors.dart
deno-service/: Dockerfile  Dockerfile.native  server-native.mjs  server.mjs
dotnet-service/: Dockerfile  Program.cs  dotnet-service.csproj
go-service/: Dockerfile  go.mod  main.go
init/: init.sql  seed.sh
k8s/: actix-service.yaml  axum-service.yaml  bun-service.yaml  dart-service.yaml  deno-service.yaml  dotnet-service.yaml  go-service.yaml  namespace.yaml  nestjs-service.yaml  node-service.yaml  postgres.yaml  redis.yaml  reset-job.yaml  seed-job.yaml
nestjs-service/: Dockerfile  package.json  tsconfig.json
nestjs-service/src/: app.module.ts  main.ts
nestjs-service/src/common/: database.module.ts  redis.module.ts
nestjs-service/src/orders/: create-order.controller.ts  create-order.service.ts  get-order.controller.ts  get-order.service.ts  list-orders.controller.ts  list-orders.service.ts  orders.module.ts
node-service/: Dockerfile  package.json  server.mjs
results/benchmarks/actix/: summary.md
results/benchmarks/axum/: summary.md
results/benchmarks/bun-native/: summary.md
results/benchmarks/bun-npm/: summary.md
results/benchmarks/dart-ioredis/: summary.md
results/benchmarks/dart-redis310/: summary.md
results/benchmarks/deno-native/: summary.md
results/benchmarks/deno-npm/: summary.md
results/benchmarks/dotnet/: summary.md
results/benchmarks/go/: summary.md
results/benchmarks/nestjs-express/: summary.md
results/benchmarks/nestjs-fastify/: summary.md
results/benchmarks/node/: summary.md
results/comparisons/: bun-native_vs_bun-npm_vs_node.md  dart-redis310_vs_dart-ioredis.md  deno-native_vs_deno-npm_vs_node.md  go_vs_axum_vs_actix.md  go_vs_bun-native.md  go_vs_node_vs_bun-native_vs_dotnet.md  go_vs_node_vs_dart-redis310.md  nestjs-fastify_vs_nestjs-express.md
scripts/: bench-local.sh  bench-one.sh  build-push.sh  deploy.sh  generate-comparison.sh  generate-summary.sh  run-bench.sh  smoke-test.sh
(+572 files in other folders)
