[package]
name = "actix-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"
tokio = { version = "1", features = ["signal"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
chrono = "0.4"
itoa = "1"
tikv-jemallocator = "0.6"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
