[package]
name = "actix-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
simd-json = "0.17"
simd-json-derive = "0.18"
tokio = { version = "1", features = ["signal", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
deadpool-redis = "0.18"
chrono = "0.4"
itoa = "1"
tikv-jemallocator = "0.6"
num_cpus = "1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
