[package]
name = "axum-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
chrono = "0.4"

[profile.release]
strip = true
lto = true
